[gd_scene load_steps=30 format=2]

[ext_resource path="res://Assets/Images/Misc/background.png" type="Texture" id=1]
[ext_resource path="res://MainMenu/MenuOptions.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Images/Misc/large button.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sound/music/ES_Back to Business - William Benckert.mp3" type="AudioStream" id=4]
[ext_resource path="res://MainMenu/MainMenu.gd" type="Script" id=5]
[ext_resource path="res://Assets/Images/Misc/menu options.png" type="Texture" id=6]
[ext_resource path="res://InventoryLogic/OptionsMenu.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Themes/ChatBox.tres" type="Theme" id=8]
[ext_resource path="res://Assets/Images/Misc/logo.png" type="Texture" id=9]
[ext_resource path="res://MainMenu/PlayerMenuState.tscn" type="PackedScene" id=10]
[ext_resource path="res://Assets/Images/Animations/water/2.png" type="Texture" id=11]
[ext_resource path="res://Assets/Images/Animations/water/4.png" type="Texture" id=12]
[ext_resource path="res://Assets/Images/Animations/water/1.png" type="Texture" id=13]
[ext_resource path="res://Assets/Images/Animations/water/3.png" type="Texture" id=14]
[ext_resource path="res://Assets/Images/Animations/water/5.png" type="Texture" id=15]
[ext_resource path="res://Assets/Images/Animations/water/5b.png" type="Texture" id=16]
[ext_resource path="res://Assets/Images/Animations/water/3b.png" type="Texture" id=17]
[ext_resource path="res://Assets/Images/Animations/water/2b.png" type="Texture" id=18]
[ext_resource path="res://Assets/Images/Animations/water/1b.png" type="Texture" id=19]
[ext_resource path="res://Assets/Images/Animations/water/4b.png" type="Texture" id=20]
[ext_resource path="res://InventoryLogic/MenuTitle.tres" type="Theme" id=21]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 50.5, 114 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 11 ), ExtResource( 14 ), ExtResource( 12 ), ExtResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 4.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 19 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 20 ), ExtResource( 16 ) ],
"loop": true,
"name": "default",
"speed": 4.0
} ]

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 46, 14 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 46, 14 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 46, 14 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 46, 14 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 46, 14 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 5 )

[node name="TitleMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -32.0
autoplay = true

[node name="Background" type="TextureRect" parent="."]
margin_right = 512.0
margin_bottom = 300.0
rect_scale = Vector2( 2, 2 )
mouse_filter = 2
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Logo" type="TextureRect" parent="."]
margin_left = 26.0
margin_top = -13.0
margin_right = 299.0
margin_bottom = 287.0
rect_scale = Vector2( 1.05, 1.05 )
mouse_filter = 2
texture = ExtResource( 9 )

[node name="Boundaries" type="YSort" parent="."]
position = Vector2( 80, 604 )

[node name="Left" type="StaticBody2D" parent="Boundaries"]
position = Vector2( -74, -427 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries/Left"]
position = Vector2( 279, 259 )
shape = SubResource( 1 )

[node name="Right" type="StaticBody2D" parent="Boundaries"]
position = Vector2( -914, -409 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries/Right"]
position = Vector2( 1912, 269 )
shape = SubResource( 1 )

[node name="CloseMenuArea" type="Area2D" parent="."]
position = Vector2( 359, 147 )
scale = Vector2( 0.5, 0.5 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CloseMenuArea"]
visible = false
polygon = PoolVector2Array( -720, -294, -718, 910, -558, 906, -554, 694, -586, 666, -596, 642, -596, 602, -586, 578, -552, 550, -538, 546, -500, 546, -472, 560, -470, 564, -170, 564, -144, 584, -134, 604, -134, 640, -140, 652, -168, 680, -470, 680, -470, 684, -500, 700, -538, 700, -552, 696, -556, 906, 1334, 912, 1330, -294 )

[node name="Menu" type="Node2D" parent="."]
visible = false
position = Vector2( 359, 147 )
scale = Vector2( 0.5, 0.5 )
z_index = 1

[node name="Background" type="TextureRect" parent="Menu"]
margin_right = 102.0
margin_bottom = 104.0
rect_scale = Vector2( 6, 6 )
mouse_filter = 2
texture = ExtResource( 6 )

[node name="OptionsMenu" parent="Menu" instance=ExtResource( 7 )]
margin_left = 70.0
margin_top = -134.0
margin_right = 70.0
margin_bottom = -134.0

[node name="Water1" type="AnimatedSprite" parent="."]
position = Vector2( 64, 552 )
scale = Vector2( 2, 2 )
frames = SubResource( 3 )

[node name="Water2" type="AnimatedSprite" parent="."]
position = Vector2( 255, 530 )
scale = Vector2( 2, 2 )
frames = SubResource( 4 )

[node name="MainMenuOptions" parent="." instance=ExtResource( 2 )]
margin_left = 18.0
margin_top = 348.0
margin_right = 18.0
margin_bottom = 348.0
rect_scale = Vector2( 0.4, 0.4 )

[node name="PlayerMenuState" parent="." instance=ExtResource( 10 )]
position = Vector2( 592, 470 )

[node name="ConnectToPlugButton" type="Button" parent="."]
margin_left = 727.0
margin_top = 29.0
margin_right = 860.0
margin_bottom = 58.0
rect_scale = Vector2( 2, 2 )
theme = ExtResource( 8 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 5 )

[node name="ConnectToPlugLabel" type="Label" parent="."]
margin_left = 740.0
margin_top = 33.0
margin_right = 1339.0
margin_bottom = 146.0
rect_scale = Vector2( 0.4, 0.4 )
theme = ExtResource( 21 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 6
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 6
text = "Connect to Plug"

[connection signal="input_event" from="CloseMenuArea" to="." method="_on_CloseMenuArea_input_event"]
[connection signal="mouse_entered" from="ConnectToPlugButton" to="MainMenuOptions" method="_on_ConnectToPlugButton_mouse_entered"]
[connection signal="mouse_exited" from="ConnectToPlugButton" to="MainMenuOptions" method="_on_ConnectToPlugButton_mouse_exited"]
[connection signal="pressed" from="ConnectToPlugButton" to="MainMenuOptions" method="_on_ConnectToPlugButton_pressed"]
